tests/fixtures/invalid/pow_set_int_set.py
# Cannot call pow() with Set[int], Int, Set[int]
x = pow({1, 2, 3}, 1, {1, 2, 3})
